# tmap

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  azure-pipelines.yml  generate_doc.sh  pyproject.toml  rebuild.sh  setup.py
mstmap/: CMakeLists.txt  Doxyfile  MANIFEST.in  biocides.py  drugbank.smi  generate_doc.sh  get_mnist.sh  pdb.py  pdb_experimental.py  setup.py  test.py  test_chembl.py  test_chembl_v_umap.py  test_coil.py  test_fashion_mnist.py  test_host.py  test_host_gdb.py  test_host_pdb.py  test_mnist.py  test_tmp.py  test_zinc.py  test_zinc_mqn.py  umap_test.py
mstmap/doc/html/: bindings_8cc__incl.map  bindings_8cc__incl.md5  classsetup_1_1CMakeBuild__coll__graph.md5  classsetup_1_1CMakeBuild__inherit__graph.map  classsetup_1_1CMakeBuild__inherit__graph.md5  classsetup_1_1CMakeExtension__coll__graph.md5  classsetup_1_1CMakeExtension__inherit__graph.map  classsetup_1_1CMakeExtension__inherit__graph.md5  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  layout_8cc__incl.map  layout_8cc__incl.md5  layout_8hh__dep__incl.map  layout_8hh__dep__incl.md5  layout_8hh__incl.map  layout_8hh__incl.md5  lshforest_8cc__incl.map  lshforest_8cc__incl.md5  lshforest_8hh__dep__incl.map  lshforest_8hh__dep__incl.md5  lshforest_8hh__incl.map  lshforest_8hh__incl.md5  minhash_8cc__incl.map  minhash_8cc__incl.md5  minhash_8hh__dep__incl.map  minhash_8hh__dep__incl.md5  minhash_8hh__incl.map  minhash_8hh__incl.md5
mstmap/doc/latex/: annotated.tex  bindings_8cc.tex  bindings_8cc__incl.md5  classsetup_1_1CMakeBuild__inherit__graph.md5  classsetup_1_1CMakeExtension.tex  classsetup_1_1CMakeExtension__coll__graph.md5  classtmap_1_1LSHForest.tex  classtmap_1_1Minhash.tex  classtmap_1_1Timer.tex  dir_7daef076a9cdd715d35a2273effa0272.tex  files.tex  hierarchy.tex  layout_8cc.tex  layout_8cc__incl.md5  layout_8hh.tex  layout_8hh__dep__incl.md5  layout_8hh__incl.md5  lshforest_8cc.tex  lshforest_8cc__incl.md5  lshforest_8hh.tex  lshforest_8hh__dep__incl.md5  lshforest_8hh__incl.md5  minhash_8cc.tex  minhash_8cc__incl.md5  minhash_8hh.tex  minhash_8hh__dep__incl.md5  minhash_8hh__incl.md5  refman.tex  structGraphProperties.tex  structLayoutConfiguration.tex  structSimpleHash.tex  structtmap_1_1GraphProperties.tex  structtmap_1_1LayoutConfiguration.tex  structtmap_1_1MapKeyPointer.tex  structtmap_1_1SimpleHash.tex
mstmap/doc/md/: tmap.md
mstmap/doc/xml/: bindings_8cc.xml  classMinhash.xml  classtmap_1_1LSHForest.xml  classtmap_1_1Minhash.xml  classtmap_1_1Timer.xml  dir_7daef076a9cdd715d35a2273effa0272.xml  fnv_8hh.xml  index.xml  layout_8cc.xml  layout_8hh.xml  lshforest_8cc.xml  lshforest_8hh.xml  minhash_8cc.xml  minhash_8hh.xml  namespaceFNV.xml  namespaceogdf.xml  namespacetmap.xml  structGraphProperties.xml  structLayoutConfiguration.xml  structtmap_1_1GraphProperties.xml  structtmap_1_1LayoutConfiguration.xml  structtmap_1_1MapKeyPointer.xml  structtmap_1_1SimpleHash.xml
mstmap/examples/: lsh_forest.py  lsh_forest_file_backed.py  lsh_forest_knng.py  minhash.py  pdb.py  pdb_experimental.py  results.txt  simple_graph.py  spanning_tree.py  spanning_tree_big.py
mstmap/examples/drugbank/: drugbank.py
mstmap/examples/flowcytometry/: flowcytometry.py
mstmap/examples/gutenberg/: gutenberg.py
mstmap/examples/miniboone/: miniboone.py
mstmap/examples/mnist/: get_mnist.sh
mstmap/examples/nips/: nips.py
mstmap/examples/old/: pdb_dist.py  test.py  test_chembl.py  test_experimental.py  test_host_gdb.py  test_host_pdb.py
mstmap/examples/rnaseq/: rnaseq.py
mstmap/examples/tutorial/: lsh_forest.py  lsh_forest_file_backed.py  lsh_forest_knng.py  lsh_forest_knng_mpl.py  minhash.py  simple_graph.py  spanning_tree.py  spanning_tree_big.py
mstmap/lib/pybind11/: cmake_install.cmake
mstmap/python-doc/: conf.py  documentation.rst
mstmap/recipe/: bld.bat  meta.yaml
mstmap/src/mstmap/: TinySHA1.hh  __init__.py  bindings.cc  hello.py  layout.cc  layout.hh  lshforest.cc  lshforest.hh  minhash.cc  minhash.hh  web.py
mstmap/src/tmap/: __init__.py  beta_distribution.hh  bindings.cc  euclideanhash.cc  euclideanhash.hh  layout.cc  layout.hh  lshforest.cc  lshforest.hh  minhash.cc  minhash.hh  web.py
mstmap/tmap/: bindings.cc  fnv.hh  layout.cc  layout.hh  lshforest.cc  lshforest.hh  minhash.cc  minhash.hh
tmap/: CMakeLists.txt  Doxyfile  pyproject.toml  setup.py
tmap/doc/html/: bindings_8cc__incl.map  classPyMinhash__coll__graph.md5  classPyMinhash__inherit__graph.md5  classtmap_1_1Minhash__inherit__graph.dot  classtmap_1_1Minhash__inherit__graph.md5  inherit_graph_1.dot  inherit_graph_3.md5  inherit_graph_4.md5  inherit_graph_6.md5  layout_8hh__dep__incl.map  layout_8hh__incl.map  layout_8hh__incl.md5  lshforest_8cc__incl.md5  lshforest_8hh__dep__incl.md5  lshforest_8hh__incl.map  lshforest_8hh__incl.md5  minhash_8cc__incl.map  minhash_8cc__incl.md5  minhash_8hh__dep__incl.md5
tmap/doc/latex/: annotated.tex  bindings_8cc.tex  bindings_8cc__incl.md5  classLSHForest.tex  classPyMinhash.tex  classPyMinhash__coll__graph.dot  classPyMinhash__coll__graph.md5  classPyMinhash__inherit__graph.dot  classPyMinhash__inherit__graph.md5  classsha1_1_1SHA1.tex  classtmap_1_1Minhash.tex  classtmap_1_1Minhash__inherit__graph.md5  classtmap_1_1Timer.tex  dir_7daef076a9cdd715d35a2273effa0272.tex  files.tex  hierarchy.tex  layout_8cc__incl.md5  layout_8hh.tex  lshforest_8cc.tex  lshforest_8cc__incl.md5  lshforest_8hh.tex  lshforest_8hh__dep__incl.md5  lshforest_8hh__incl.md5  minhash_8cc__incl.md5  minhash_8hh.tex  minhash_8hh__dep__incl.md5  refman.tex  structMapKeyPointer.tex  structtmap_1_1LayoutConfiguration.tex
tmap/doc/md/: tmap.md
tmap/doc/xml/: TinySHA1_8hh.xml  ____init_____8py.xml  bindings_8cc.xml  classPyMinhash.xml  classTimer.xml  classsha1_1_1SHA1.xml  classtmap_1_1LSHForest.xml  (+14 more)
tmap/python-doc/: conf.py
tmap/recipe/: bld.bat  conda_build_config.yaml  meta.yaml
tmap/tests/: layout_test.py  test_layout.py  test_minhash.py
tmap/tmap/: analyse.cc  analyse.hh  bindings.cc  layout.cc  layout.hh  lshforest.cc  lshforest.hh  minhash.cc  minhash.hh
(+188 files in other folders)
