[project]
name = "tmap-viz"
description = "A Python package for visualizing large, high-dimensional data sets."
readme = "README.md"
# keywords = ["one", "two"]
# license = { text = "BSD 3-Clause License" }
# classifiers = ["Framework :: Django", "Programming Language :: Python :: 3"]
dependencies = ["matplotlib", "annoy ~= 1.17.0"]
dynamic = ["version"]
authors = [
  {"name" = "Daniel Probst", "email" = "daenuprobst@gmail.com"},
]
maintainers = [
  {"name" = "Frank Harrison", "email" = "doublethefish@gmail.com"},
]

[tool.cibuildwheel]
# Skip 32-bit builds, musl build, and pypy builds
skip = ["*-manylinux_i686", "*-musllinux_*", "pp*", "*p36-*", "*p37-*", "*p38-*"]

[tool.cibuildwheel.linux]
before-build = """\
  cd ./ogdf-conda/src && \
  mkdir build && \
  cd build && \
  cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=${LIBOGDF_INSTALL_PATH} -DBUILD_SHARED_LIBS=ON && \
  make -j4 && \
  make install && \
  cd .. && \
  rm -r build\
  """

[tool.cibuildwheel.linux.environment]
LIBOGDF_INSTALL_PATH="$(pwd)/libOGDF"

[tool.cibuildwheel.macos]
before-all = ["brew install libomp"]
before-build = """\
  mkdir -p $LIBOGDF_INSTALL_PATH && \
  cd ./ogdf-conda/src && \
  mkdir -p build && \
  cd build && \
  cmake .. \
        -DCMAKE_BUILD_TYPE=Release \
        -DCMAKE_INSTALL_PREFIX=$LIBOGDF_INSTALL_PATH \
        -DBUILD_SHARED_LIBS=ON \
        && \
  make -j4 && \
  make install && \
  cd ..
  """
repair-wheel-command = [
  "DYLD_LIBRARY_PATH=$LIBOGDF_INSTALL_PATH/lib delocate-listdeps {wheel}",
  "DYLD_LIBRARY_PATH=$LIBOGDF_INSTALL_PATH/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
]

[tool.cibuildwheel.macos.environment]
LIBOGDF_INSTALL_PATH="$(pwd)/libOGDF"
CXX="$(brew --prefix llvm)/bin/clang++"
CC="$(brew --prefix llvm)/bin/clang"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-build = """\
  cd ./ogdf-conda/src && \
  mkdir build && \
  cd build && \
  cmake .. -DCMAKE_GENERATOR="Visual Studio 17 2022" -DCMAKE_INSTALL_PREFIX=C:/ogdf/ -DCMAKE_GENERATOR_PLATFORM=x64 -DCMAKE_BUILD_TYPE=Release && \
  cmake --build . --config Release --target install -- /m && \
  cd .. && \
  rmdir /Q /S build\
  """

[tool.cibuildwheel.windows.environment]
LDFLAGS = "-LC:/ogdf/lib"
CFLAGS = "-IC:/ogdf/include"
